cmake_minimum_required(VERSION 2.8)
project( grabcutProject )
set(OpenCV_DIR /home/xiaojie/opencv/opencv-3.1.0/build)
find_package( OpenCV REQUIRED )
find_package( CUDA REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS};/usr/local/cuda/include;/usr/local/include;/home/xiaojie/grabcut)
#message("include: ${OpenCV_INCLUDE_DIRS}")
cuda_add_executable( grabcutMain funcs.cpp mainFunc.cpp grabcut.cpp fastcode.cu)
target_link_libraries( grabcutMain ${OpenCV_LIBS} )
#message("libs: ${OpenCV_LIBS}")
